--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,10 @@ dependencies:
   pdf: ^3.11.1
   path_provider: ^2.1.4
   open_file: ^3.5.8
+  flutter_widget_from_html: ^0.15.2
+  universal_io: ^2.2.2
+  sqflite_common_ffi_web: ^0.4.5+3
+  flutter_quill_to_pdf: ^2.2.5
 
 dev_dependencies:
   flutter_test:
